add model qi, service, repo, controller for create qi
